Initial commits footer services and logo eregister

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="p-space">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rendere più felice chiacciere ogni giorno e ritrovarsi più spesso.
             </p>
             <div class="btn-discord">
-            <button class="btn-mac">Scarica per Mac</button>
+            <button class="btn-mac">&#129047;Scarica per Mac</button>
             <button class="btn-broswer">Apri Discord nel tuo broswer</button>
             </div>
 
@@ -96,7 +96,7 @@
                 <div class="image-row">
                     <img src="./assets/img/item4-big.svg" alt="">
                 </div>
-                <h3 class="title-ready">Ponto a iniziare la tua avventura</h3>
+                <h3 class="title-ready">Pronto a iniziare la tua avventura?</h3>
 
                 <div class="btn-down-mac">
                     <button class="btn-download">Scarica per Mac</button>
@@ -110,11 +110,61 @@
         <section class="section-footer">
             <div class="container">
             <div class="top flex">
-                <div class="talk"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
+                <div class="talk">
+                    <h4 class="talk-place">Il tuo posto per parlare</h4>
+                    <img src="./assets/img/ita.png"  class="logo-ita" alt="logo italia">
+                    <span class="nation">Italiano&#11167;</span>
+
+                </div>
+                <div class="item">
+                    <h5 class="services">Prodotto
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </h5>
+                </div>
+                <div class="item">
+                    <h5 class="services">Compagnia
+                        <ul>
+                            <li>Chi siamo</li>
+                            <li>Lavora con noi</li>
+                            <li>Marchio</li>
+                            <li>Redazione</li>
+                            <li>Negozio</li>
+                        </ul>
+                    </h5>
+                </div>
+                <div class="item">
+                    <h5 class="services">Prodotto
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </h5>
+                </div>
+                <div class="item">
+                    <h5 class="services">Risorse
+                        <ul>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
+                        </ul>
+                    </h5>
+                </div>
             </div>
             </div>
         </section>
@@ -122,8 +172,8 @@
         <section class="section-footer">
             <div class="container flex">
                 <div class="flex justify-space-between bg-aquamarine full-width height ">
-                  <img class="image-footer" src="" alt="">
-                    <button class="button-register"></button>
+                  <img class="image-footer" src="./assets/img/logo.svg" alt="">
+                    <button class="button-register">Registrati</button>
                 </div>
 
 
