--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -96,6 +97,7 @@
                 <div class="image-row">
                     <img src="./assets/img/item4-big.svg" alt="">
                 </div>
+                <img src="./assets/img/stars.svg" class="stars" alt="">
                 <h3 class="title-ready">Pronto a iniziare la tua avventura?</h3>
 
                 <div class="btn-down-mac">
@@ -114,6 +116,13 @@
                     <h4 class="talk-place">Il tuo posto per parlare</h4>
                     <img src="./assets/img/ita.png"  class="logo-ita" alt="logo italia">
                     <span class="nation">Italiano&#11167;</span>
+                    <div class="image-social">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                 
 
                 </div>
                 <div class="item">
